src/test/ui/issues/issue-14366.rs
fn main() {
    let _x = "test" as &::std::any::Any;
    //~^ ERROR the size for values of type
}
